# tutorials

./: .gitignore  README.md
c++/: classes_intro.cpp
cpp/: cpp.sln
cpp/cpp/: classes_intro.cpp  cpp.vcxproj  cpp.vcxproj.filters  example_c.cpp  inheritance_shapes.cpp
pyqt5/: hello_qt.py
pytorch/: CNN_CIFAR10.ipynb  Convolution-demo.ipynb  pytorch_installation.txt
pytorch/bolts/: simple_classifier.py  sinkhorn.py  swav_module.py  swav_module_simple.py
pytorch/cnn-basics/: CIFAR10_CNN.ipynb  CNN_CIFAR10.ipynb  Convolution-demo.ipynb  Homework.ipynb  MNIST_CNN.ipynb  Traffic_Sign_Recognition.ipynb  pytorch_basics.ipynb  pytorch_visualization.ipynb  readme.txt
pytorch/extension-requ-cpp/: grad_check.py
pytorch/extension-requ-cpp/cpp/: jit.py  requ.cpp  requ.py  requ_test.py  setup.py
pytorch/extension-requ-cpp/cuda/: jit.py  requ.py  requ_cuda.cpp  requ_cuda_kernel.cu  setup.py
pytorch/extension-requ-cpp/cuda_2d/: jit.py  requ_2d.py  requ_cuda_2d.cpp  requ_cuda_2d_kernel.cu  setup.py
pytorch/extension-requ-cpp/python/: requ.py
pytorch/mini_imagenet/: boiler_plate.py  boilerplate_h5.py  classes.txt  data_to_pth.py  organize_data.py  to_hd5.py  train_miniimagenet.py
pytorch/transfer-learning/: CNN_CIFAR10.ipynb  CNN_CIFAR10.py  CNN_Sketches.ipynb  README.md
tensorflow/extension-requ-cpp/: CMakeLists.txt  _requ_grad.py  compile.sh  requ.cc  requ_grad.cc  requ_manual_test.py
